--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,13 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="manifest" href="/site.webmanifest" />
     <link
       href="https://fonts.googleapis.com/css?family=Overlock|Oxygen"
       rel="stylesheet"
     />
-  <link rel="shortcut icon" href="favicon-16x16.png"></head>
+  </head>
   <body>
     <div id="root"></div>
     <script src="bundle.js"></script>
-  <script type="text/javascript" src="bundle.js"></script></body>
+  </body>
 </html>
