Add Twitter card metadata

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,19 @@
       gtag("config", "UA-137858771-1");
     </script>
 
+    <!-- Twitter Card Data -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Practice Verb Conjugations with Conju-gator!"
+    />
+    <meta
+      name="twitter:description"
+      content="Free, simple app to help you practice all the common verb conjugations. Currently supporting Spanish."
+    />
+    <meta name="twitter:image" content="/twittercard.png" />
+    <!-- End Twitter Card Data -->
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
