--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,10 @@
       name="twitter:description"
       content="Free, simple app to help you practice all the common verb conjugations. Currently supporting Spanish."
     />
-    <meta name="twitter:image" content="/twittercard.png" />
+    <meta
+      name="twitter:image"
+      content="https://conju-gator.com/twittercard.png"
+    />
     <!-- End Twitter Card Data -->
 
     <meta charset="UTF-8" />
