--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,10 @@
     <div id="root"></div>
     <script type="text/javascript">
       WebFontConfig = {
-        google: { families: ["Overlock", "Oxygen"] }
+        google: {
+          families: ["Overlock", "Oxygen"],
+          urls: ["http://fonts.googleapis.com/css?family=Overlock|Oxygen"]
+        }
       };
       (function() {
         var wf = document.createElement("script");
@@ -65,7 +68,7 @@
     <noscript>
       <link
         href="http://fonts.googleapis.com/css?family=Overlock|Oxygen"
-        rel="stylesheet"
+        rel="preconnect"
         type="text/css"
       />
     </noscript>
