--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,7 @@
     <script type="text/javascript">
       WebFontConfig = {
         google: {
-          families: ["Overlock", "Oxygen"],
-          urls: ["http://fonts.googleapis.com/css?family=Overlock|Oxygen"]
+          families: ["Overlock", "Oxygen"]
         }
       };
       (function() {
@@ -64,13 +63,5 @@
         s.parentNode.insertBefore(wf, s);
       })();
     </script>
-
-    <noscript>
-      <link
-        href="http://fonts.googleapis.com/css?family=Overlock|Oxygen"
-        rel="preconnect"
-        type="text/css"
-      />
-    </noscript>
   </body>
 </html>
